logs/tebless.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/blessed'...
Listing './lib/python3.5/site-packages/blessed/tests'...
Listing './lib/python3.5/site-packages/blessed-1.14.2.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tebless'...
Listing './lib/python3.5/site-packages/tebless/devs'...
Compiling './lib/python3.5/site-packages/tebless/devs/_debug.py'...
***   File "./lib/python3.5/site-packages/tebless/devs/_debug.py", line 37
    debug(f" < {self._obj} > ".center(80, "="))
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tebless/devs/_widget.py'...
***   File "./lib/python3.5/site-packages/tebless/devs/_widget.py", line 69
    raise AttributeError(f'{self} object has no attribute {name}')
                                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tebless/themes'...
Compiling './lib/python3.5/site-packages/tebless/themes/menu.py'...
***   File "./lib/python3.5/site-packages/tebless/themes/menu.py", line 83
    wrapper = f'{line}\n{l_eq}{{}}\n{line}'
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/tebless/utils'...
Listing './lib/python3.5/site-packages/tebless/widgets'...
Listing './lib/python3.5/site-packages/tebless-1.2.3.dist-info'...
Listing './lib/python3.5/site-packages/wcwidth'...
Listing './lib/python3.5/site-packages/wcwidth/tests'...
Listing './lib/python3.5/site-packages/wcwidth-0.1.7.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
